--- a/styles/main.css
+++ b/styles/main.css
@@ -289,7 +289,35 @@ canvas {
   font-weight: 900; }
 
 #mouse {
-  background-color: pink; }
+  grid-column: 5 / 9;
+  grid-row: 8 / 9;
+  z-index: 30;
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+  font-weight: 600; }
+
+#innerMouseDiv {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+#imgMouse {
+  width: 6%;
+  margin: 0 1.5rem;
+  box-shadow: 11px 14px 49px rgba(0, 0, 0, 0.4); }
+
+#zoom {
+  width: 100%;
+  text-align: center; }
+
+#rotate {
+  text-transform: uppercase; }
+
+#pan {
+  margin-right: 2rem;
+  text-transform: uppercase; }
 
 footer {
   /*    grid-column: 12 / 13;
