--- a/styles/main.css
+++ b/styles/main.css
@@ -100,6 +100,12 @@ a:hover {
 .dInBlock {
   display: inline-block; }
 
+.visHidden {
+  visibility: hidden; }
+
+.visVisible {
+  visibility: visible; }
+
 /*   //////////////////   GRID   ////////////////   */
 .gridContainer {
   display: -ms-grid;
@@ -154,10 +160,11 @@ a:hover {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  z-index: 30;
+  z-index: 100;
   display: none; }
 
 .navButton {
+  position: relative;
   color: white;
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 50px;
@@ -259,7 +266,7 @@ canvas {
   grid-row: 1 / 10;
   z-index: 0; }
 
-#mainOne {
+#mainOne, #mainTwo, #mainThree, #mainFour, #mainFive {
   grid-column: 1 / 13;
   grid-row: 2 / 4;
   display: flex;
@@ -267,6 +274,13 @@ canvas {
   align-items: center;
   width: 100%;
   z-index: 30; }
+
+#mainSix {
+  grid-column: 1 / 13;
+  grid-row: 3 / 9;
+  display: flex;
+  align-items: center;
+  width: 100%; }
 
 #introTextSm {
   color: white;
@@ -287,35 +301,6 @@ canvas {
   font-style: italic;
   font-size: 12rem;
   font-weight: 900; }
-
-#mouse {
-  grid-column: 5 / 9;
-  grid-row: 8 / 9;
-  z-index: 30;
-  flex-direction: column;
-  font-size: 16px;
-  font-weight: 600; }
-
-#innerMouseDiv {
-  width: 100%;
-  align-items: center;
-  justify-content: center; }
-
-#imgMouse {
-  width: 6%;
-  margin: 0 1.5rem;
-  box-shadow: 11px 14px 49px rgba(0, 0, 0, 0.4); }
-
-#zoom {
-  width: 100%;
-  text-align: center; }
-
-#rotate {
-  text-transform: uppercase; }
-
-#pan {
-  margin-right: 2rem;
-  text-transform: uppercase; }
 
 footer {
   /*    grid-column: 12 / 13;
@@ -643,44 +628,47 @@ footer {
     margin-bottom: .25rem; }
 
 #logo {
-  -ms-grid-column: 6;
-  -ms-grid-column-span: 2;
-  grid-column: 6 / 8;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1 / 2;
-  width: 100%;
-  z-index: 20;
-  align-items: center;
-  justify-content: center; }
+  /*      -ms-grid-column: 6;
+      -ms-grid-column-span: 2;
+      grid-column: 6 / 8;
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 1;
+      grid-row: 1 / 2;
+
+      width: 100%;
+      z-index: 20;
+
+      align-items: center;
+      justify-content: center;*/ }
   #logo a {
     text-align: center; }
   #logo img {
     width: 50%; }
 
-#share {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 4;
-  grid-column: 1 / 5;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 6;
-  grid-row: 2 / 8; }
-
+/*  #share {
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 4;
+      grid-column: 1 / 5;
+      -ms-grid-row: 2;
+      -ms-grid-row-span: 6;
+      grid-row: 2 / 8;
+  }
+*/
 #subscribe {
-  -ms-grid-column: 5;
-  -ms-grid-column-span: 4;
-  grid-column: 5 / 9;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 6;
-  grid-row: 2 / 8; }
+  /*      -ms-grid-column: 5;
+      -ms-grid-column-span: 4;
+      grid-column: 5 / 9;
+      -ms-grid-row: 2;
+      -ms-grid-row-span: 6;
+      grid-row: 2 / 8;*/ }
 
 #learn {
-  -ms-grid-column: 9;
-  -ms-grid-column-span: 4;
-  grid-column: 9 / 13;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 6;
-  grid-row: 2 / 8; }
+  /*      -ms-grid-column: 9;
+      -ms-grid-column-span: 4;
+      grid-column: 9 / 13;
+      -ms-grid-row: 2;
+      -ms-grid-row-span: 6;
+      grid-row: 2 / 8;*/ }
 
 #subscribe form, #learn form {
   width: 100%;
