--- a/styles/main.scss
+++ b/styles/main.scss
@@ -191,6 +191,13 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
         display: inline-block;
     }
 
+    .visHidden {
+      visibility: hidden;
+    }
+    .visVisible {
+      visibility: visible;
+    }
+
   /*   //////////////////   GRID   ////////////////   */
 
 
@@ -281,13 +288,15 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
     -ms-flex-pack: center;
     justify-content: center;
 
-    z-index: 30;
+    z-index: 100;
     display: none;
 
   }
 
 
   .navButton {
+
+    position: relative;
 
     color: white;
 
@@ -429,7 +438,7 @@ canvas {
 
 }
 
-#mainOne {
+#mainOne, #mainTwo, #mainThree, #mainFour, #mainFive {
 
     grid-column: 1 / 13;
     grid-row: 2 / 4;
@@ -441,16 +450,30 @@ canvas {
 
 }
 
+
+#mainSix {
+
+    grid-column: 1 / 13;
+    grid-row: 3 / 9;
+    display: flex;
+
+    align-items: center;
+    width: 100%;
+
+}
+
+
 #introTextSm {
 
     color: white;
-   
+
     text-align: center;
     margin-bottom: 0;
     width: 100%;
     text-transform: uppercase;
     font-weight: 100;
     font-size: 3rem;
+    
 
 
 
@@ -469,45 +492,9 @@ canvas {
     font-style: italic;
     font-size: 12rem;
     font-weight: 900;
+
     
 
-}
-
-#mouse {
-
-    grid-column: 5 / 9;
-    grid-row: 8 / 9;
-    z-index: 30;
-    flex-direction: column;
-    font-size: 16px;
-    font-weight: 600;
-}
-
-#innerMouseDiv {
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-}
-
-
-#imgMouse {
-    width: 6%;
-    margin: 0 1.5rem;
-    box-shadow: 11px 14px 49px rgba(0,0,0,0.4);
-}
-
-#zoom {
-    width: 100%;
-    text-align: center;
-}
-
-#rotate {
-    text-transform: uppercase;
-}
-
-#pan {
-    margin-right: 2rem;
-    text-transform: uppercase;
 }
 
 
@@ -987,16 +974,18 @@ footer {
 
   #share, #learn, #subscribe {
 
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-      flex-direction: column;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-              align-items: center;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-              justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
 
 
 
@@ -1030,7 +1019,7 @@ footer {
 
   #logo {
 
-      -ms-grid-column: 6;
+/*      -ms-grid-column: 6;
       -ms-grid-column-span: 2;
       grid-column: 6 / 8;
       -ms-grid-row: 1;
@@ -1041,7 +1030,7 @@ footer {
       z-index: 20;
 
       align-items: center;
-      justify-content: center;
+      justify-content: center;*/
 
       a {
           text-align: center;
@@ -1055,7 +1044,7 @@ footer {
 
   }
 
-  #share {
+/*  #share {
       -ms-grid-column: 1;
       -ms-grid-column-span: 4;
       grid-column: 1 / 5;
@@ -1063,23 +1052,23 @@ footer {
       -ms-grid-row-span: 6;
       grid-row: 2 / 8;
   }
-
+*/
   #subscribe {
-      -ms-grid-column: 5;
+/*      -ms-grid-column: 5;
       -ms-grid-column-span: 4;
       grid-column: 5 / 9;
       -ms-grid-row: 2;
       -ms-grid-row-span: 6;
-      grid-row: 2 / 8;
+      grid-row: 2 / 8;*/
   }
 
   #learn {
-      -ms-grid-column: 9;
+/*      -ms-grid-column: 9;
       -ms-grid-column-span: 4;
       grid-column: 9 / 13;
       -ms-grid-row: 2;
       -ms-grid-row-span: 6;
-      grid-row: 2 / 8;
+      grid-row: 2 / 8;*/
   }
 
 
