--- a/styles/main.scss
+++ b/styles/main.scss
@@ -438,7 +438,7 @@ canvas {
 
 }
 
-#mainOne, #mainTwo, #mainThree, #mainFour, #mainFive {
+#mainOne, #mainTwo, #mainFour, #mainFive {
 
     grid-column: 1 / 13;
     grid-row: 2 / 4;
@@ -447,6 +447,22 @@ canvas {
     align-items: center;
     width: 100%;
     z-index: 30;
+
+}
+
+
+#mainThree {
+
+    grid-column: 4 / 10;
+    grid-row: 2 / 7;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    z-index: 30;
+    background-color: rgba(125,125,125,0.9);
+    box-shadow: 5px 5px 18px rgba(0,0,0,0.5);
 
 }
 
@@ -626,13 +642,7 @@ footer {
 
   #bigI {
 
-      -ms-grid-column: 5;
-      -ms-grid-column-span: 4;
-      grid-column: 5 / 9;
 
-      -ms-grid-row: 1;
-      -ms-grid-row-span: 9;
-      grid-row: 1 / 9;
 
       color: $brandBlue;
       transition: all 0.3s ease-out;
@@ -734,6 +744,7 @@ footer {
     margin: -1vh;
 
 }
+
 
 
 @keyframes moveInstructBG {
@@ -1928,12 +1939,6 @@ footer {
 
 
 
-  #bigI {
-
-      grid-column: 5 / span 4;
-      grid-row: 1 / 2;
-
-  }
 
 
   /* Instructions */
