--- a/styles/main.css
+++ b/styles/main.css
@@ -284,6 +284,7 @@ canvas {
   justify-content: center;
   width: 100%;
   z-index: 30;
+  position: relative;
   background-color: rgba(125, 125, 125, 0.9);
   box-shadow: 5px 5px 18px rgba(0, 0, 0, 0.5); }
 
