--- a/styles/main.scss
+++ b/styles/main.scss
@@ -453,8 +453,8 @@ canvas {
 
 #mainThree {
 
-    grid-column: 4 / 10;
-    grid-row: 2 / 7;
+    grid-column: 1 / 13;
+    grid-row: 1 / 13;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -462,8 +462,8 @@ canvas {
     width: 100%;
     z-index: 30;
     position: relative;
-    background-color: rgba(125,125,125,0.9);
-    box-shadow: 5px 5px 18px rgba(0,0,0,0.5);
+    background-color: rgba(61, 61, 61, 0.7);
+    
 
 }
 
