--- a/styles/main.css
+++ b/styles/main.css
@@ -276,8 +276,8 @@ canvas {
   z-index: 30; }
 
 #mainThree {
-  grid-column: 4 / 10;
-  grid-row: 2 / 7;
+  grid-column: 1 / 13;
+  grid-row: 1 / 13;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -285,8 +285,7 @@ canvas {
   width: 100%;
   z-index: 30;
   position: relative;
-  background-color: rgba(125, 125, 125, 0.9);
-  box-shadow: 5px 5px 18px rgba(0, 0, 0, 0.5); }
+  background-color: rgba(61, 61, 61, 0.7); }
 
 #mainSix {
   grid-column: 1 / 13;
@@ -305,7 +304,7 @@ canvas {
   font-size: 3rem; }
 
 #introTextLg {
-  color: white;
+  color: #293142;
   text-align: center;
   margin: -3rem 0;
   width: 100%;
