--- a/styles/main.scss
+++ b/styles/main.scss
@@ -453,13 +453,15 @@ canvas {
 
 #mainThree {
 
-    grid-column: 1 / 13;
-    grid-row: 1 / 13;
+/*    grid-column: 1 / 13;
+    grid-row: 1 / 10;*/
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
+    height: 100%;
     z-index: 30;
     position: relative;
     background-color: rgba(61, 61, 61, 0.7);
