--- a/styles/main.css
+++ b/styles/main.css
@@ -276,8 +276,8 @@ canvas {
   z-index: 30; }
 
 #mainThree {
-  /*    grid-column: 1 / 13;
-    grid-row: 1 / 10;*/
+  grid-column: 1 / 13;
+  grid-row: 1 / 10;
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -286,7 +286,6 @@ canvas {
   width: 100%;
   height: 100%;
   z-index: 30;
-  position: relative;
   background-color: rgba(61, 61, 61, 0.7); }
 
 #mainSix {
