--- a/styles/main.css
+++ b/styles/main.css
@@ -266,7 +266,7 @@ canvas {
   grid-row: 1 / 10;
   z-index: 0; }
 
-#mainOne, #mainTwo, #mainFour, #mainFive {
+#mainOne, #mainTwo {
   grid-column: 1 / 13;
   grid-row: 2 / 4;
   display: flex;
@@ -276,6 +276,19 @@ canvas {
   z-index: 30; }
 
 #mainThree {
+  grid-column: 1 / 13;
+  grid-row: 1 / 10;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  z-index: 30;
+  background-color: rgba(61, 61, 61, 0.7); }
+
+#mainFour, #mainFive {
   grid-column: 1 / 13;
   grid-row: 1 / 10;
   position: absolute;
