--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,7 +4,6 @@
 /*   //////////////////   SASS   /////////////////   */
 
 
-
 /*   Variables   */
 $bgColor: #e7f0f3;
 /*$brandBlue: #1659a7;*/
@@ -45,6 +44,26 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
 }
 
 
+
+#overlay {
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0,0.6);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+}
+
+#spinner {
+
+}
+
+
+@keyframes spin {
+    from{transform: rotate(0deg);}
+    to{transform: rotate(360deg);}
+}
 
 /*   /////////////   Elements   ////////////   */
 
@@ -192,10 +211,20 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
     }
 
     .visHidden {
-      visibility: hidden;
+        visibility: hidden;
     }
     .visVisible {
-      visibility: visible;
+        visibility: visible;
+    }
+
+    .optionBorder {
+        border-color: white; 
+        border-radius: 25px; 
+        border-style: solid;
+        border-width: 1px;
+        width: 300px; 
+        height: 50px;
+        text-align: center;
     }
 
   /*   //////////////////   GRID   ////////////////   */
