--- a/styles/main.css
+++ b/styles/main.css
@@ -106,6 +106,15 @@ a:hover {
 .visVisible {
   visibility: visible; }
 
+.optionBorder {
+  border-color: white;
+  border-radius: 25px;
+  border-style: solid;
+  border-width: 1px;
+  width: 300px;
+  height: 50px;
+  text-align: center; }
+
 /*   //////////////////   GRID   ////////////////   */
 .gridContainer {
   display: -ms-grid;
