--- a/styles/main.scss
+++ b/styles/main.scss
@@ -192,10 +192,20 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
     }
 
     .visHidden {
-      visibility: hidden;
+        visibility: hidden;
     }
     .visVisible {
-      visibility: visible;
+        visibility: visible;
+    }
+
+    .optionBorder {
+        border-color: white; 
+        border-radius: 25px; 
+        border-style: solid;
+        border-width: 1px;
+        width: 300px; 
+        height: 50px;
+        text-align: center;
     }
 
   /*   //////////////////   GRID   ////////////////   */
