--- a/styles/main.css
+++ b/styles/main.css
@@ -275,6 +275,11 @@ canvas {
   grid-row: 1 / 10;
   z-index: 0; }
 
+#overlay {
+  grid-column: 1 / 13;
+  grid-row: 1 / 11;
+  z-index: 40; }
+
 #mainOne, #mainTwo {
   grid-column: 1 / 13;
   grid-row: 2 / 4;
@@ -1156,7 +1161,7 @@ footer {
   .gridContainer {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: 10vh;
+    grid-auto-rows: 9.1vh;
     grid-gap: 1vh;
     grid-auto-flow: row; }
   /*  .gridContainer > * {
