--- a/styles/main.scss
+++ b/styles/main.scss
@@ -454,7 +454,12 @@ canvas {
     grid-column: 1 / 13;
     grid-row: 1 / 11;
     z-index: 40;
-    background-color: crimson;
+    background-color: limegreen;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 
 }
 
