--- a/styles/main.scss
+++ b/styles/main.scss
@@ -458,8 +458,14 @@ canvas {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    
+    animation: spin 1s linear infinite;
+    height: 10px;
+    width: 10px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    margin: -5px;
 
 }
 
@@ -467,16 +473,7 @@ canvas {
     opacity: 0;
 }
 
-#loader {
-  animation: spin 1s linear infinite;
-  height: 10px;
-  width: 10px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -5px;
-  
-}
+
 
 @keyframes spin {
   0% {
