--- a/styles/main.css
+++ b/styles/main.css
@@ -283,16 +283,20 @@ canvas {
   display: flex;
   align-items: center;
   justify-content: center;
-  animation: spin 1s linear infinite;
-  height: 10px;
-  width: 10px;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  margin: -5px; }
+  width: 100%;
+  height: 100%; }
 
 #overlay.fade-out {
   opacity: 0; }
+
+#loader {
+  animation: spin 1s linear infinite;
+  height: 10px;
+  width: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -5px; }
 
 @keyframes spin {
   0% {
