--- a/styles/main.css
+++ b/styles/main.css
@@ -284,7 +284,8 @@ canvas {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  opacity: 1; }
 
 #overlay.fade-out {
   opacity: 0; }
