--- a/styles/main.css
+++ b/styles/main.css
@@ -284,10 +284,9 @@ canvas {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%;
-  opacity: 1; }
+  height: 100%; }
 
-#overlay.fade-out {
+.fade-out {
   opacity: 0; }
 
 #loader {
