--- a/styles/main.scss
+++ b/styles/main.scss
@@ -460,11 +460,10 @@ canvas {
     justify-content: center;
     width: 100%;
     height: 100%;
-    opacity: 1;
 
 }
 
-#overlay.fade-out {
+.fade-out {
     opacity: 0;
 }
 
