--- a/styles/main.scss
+++ b/styles/main.scss
@@ -449,7 +449,7 @@ canvas {
 }
 
 
-#overlay {
+/*#overlay {
 
     grid-column: 1 / 13;
     grid-row: 1 / 11;
@@ -476,7 +476,7 @@ canvas {
   left: 50%;
   margin: -5px;
   
-}
+}*/
 
 @keyframes spin {
   0% {
