--- a/styles/main.css
+++ b/styles/main.css
@@ -275,19 +275,23 @@ canvas {
   grid-row: 1 / 10;
   z-index: 0; }
 
-#overlay {
-  grid-column: 1 / 13;
-  grid-row: 1 / 11;
-  z-index: 40;
-  background-color: limegreen;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%; }
+/*#overlay {
+
+    grid-column: 1 / 13;
+    grid-row: 1 / 11;
+    z-index: 40;
+    background-color: limegreen;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+
+}
 
 #overlay.fade-out {
-  opacity: 0; }
+    opacity: 0;
+}
 
 #loader {
   animation: spin 1s linear infinite;
@@ -296,8 +300,9 @@ canvas {
   position: absolute;
   top: 50%;
   left: 50%;
-  margin: -5px; }
-
+  margin: -5px;
+  
+}*/
 @keyframes spin {
   0% {
     box-shadow: 0px -30px #000,  10px -30px #000,  20px -20px #000,  30px -10px #000,  30px 0px #000,  30px 10px #000,  20px 20px #000,  10px 30px #000,  0px 30px transparent,  -10px 30px transparent,  -20px 20px transparent,  -30px 10px transparent,  -30px 0px transparent,  -30px -10px transparent,  -20px -20px transparent, -10px -30px transparent; }
