--- a/styles/main.css
+++ b/styles/main.css
@@ -358,6 +358,10 @@ canvas {
   width: 100%;
   z-index: 30; }
 
+#mainTwo {
+  grid-column: 1 / 13;
+  grid-row: 2 / 10; }
+
 #mainThree {
   grid-column: 1 / 13;
   grid-row: 1 / 10;
@@ -453,6 +457,10 @@ footer {
     line-height: 2.25rem; }
   #wantToTry h4, #wantToTry4 h4, #wantToTry5 h4 {
     margin-bottom: 1.5rem; }
+
+#wantToTry {
+  width: 100%;
+  height: 100%; }
 
 /*   Page 3   */
 @keyframes blurIn {
