--- a/styles/main.scss
+++ b/styles/main.scss
@@ -823,7 +823,10 @@ canvas {
 
 }
 
-
+#mainTwo {
+    grid-column: 1 / 13;
+    grid-row: 2 / 10;
+}
 #mainThree {
 
     grid-column: 1 / 13;
@@ -956,6 +959,7 @@ footer {
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
       flex-direction: column;
+
       -webkit-box-pack: center;
       -ms-flex-pack: center;
               justify-content: center;
@@ -977,6 +981,11 @@ footer {
 
       }
 
+  }
+
+  #wantToTry {
+    width:100%;
+    height: 100%;
   }
 
 
