--- a/styles/main.css
+++ b/styles/main.css
@@ -243,7 +243,15 @@ a:hover {
   border-radius: 25px;
   border-width: 2px;
   border-color: white;
-  border-style: solid; }
+  border-style: solid;
+  width: 75%;
+  padding: 0;
+  margin: 0 auto;
+  font-size: 1rem;
+  height: 63%;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
 
 /* /////////////   Main Content   ///////////// */
 /*   Main  */
@@ -1238,9 +1246,8 @@ footer {
   .gridContainer {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: 9.1vh;
-    grid-gap: 1vh;
-    grid-auto-flow: row; }
+    grid-template-rows: repeat(10, 9.1vh);
+    grid-gap: 1vh; }
   /*  .gridContainer > * {
 
       grid-column: 1 / span 12;
