--- a/styles/main.scss
+++ b/styles/main.scss
@@ -391,16 +391,19 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
 
 
   .hideAniRev {
-      animation-name: navAniRev;
-      animation-duration: 1.5s;
-      animation-timing-function: ease-out;
-      animation-fill-mode: forwards;
-      animation-direction: reverse;
+
+    animation-name: navAniRev;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+    animation-direction: reverse;
+
   }
 
 
 
 #butt1 {
+
     grid-column: 5 / 9;
     grid-row: 9 / 10;
     z-index: 200;
@@ -409,6 +412,16 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
     border-width: 2px;
     border-color: white;
     border-style: solid;
+
+    width: 75%;
+    padding: 0;
+    margin: 0 auto;
+    font-size: 1rem;
+    height: 63%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 
@@ -2310,9 +2323,8 @@ footer {
 
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: 9.1vh;
+    grid-template-rows: repeat(10, 9.1vh);
     grid-gap: 1vh;
-    grid-auto-flow: row;
       
   }
 
