--- a/styles/main.css
+++ b/styles/main.css
@@ -365,11 +365,7 @@ canvas {
   width: 100%;
   z-index: 30; }
 
-#mainTwo {
-  grid-column: 1 / 13;
-  grid-row: 2 / 10; }
-
-#mainThree {
+#mainTwo, #mainThree {
   grid-column: 1 / 13;
   grid-row: 1 / 10;
   position: absolute;
