--- a/styles/main.scss
+++ b/styles/main.scss
@@ -208,6 +208,20 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
         text-align: center;
     }
 
+    .h1Instructions {
+        
+        color: #d0c700;
+        text-align: center;
+        font-family: quatro, sans-serif;
+        font-style: italic;
+        font-weight: 900;
+        margin-top: 10vh;
+
+    }
+
+
+
+
   /*   //////////////////   GRID   ////////////////   */
 
 
