--- a/styles/main.css
+++ b/styles/main.css
@@ -406,7 +406,7 @@ canvas {
   width: 100%;
   z-index: 30; }
 
-#mainTwo, #mainThree {
+#mainTwo, #mainFour {
   grid-column: 1 / 13;
   grid-row: 1 / 10;
   position: absolute;
@@ -419,7 +419,18 @@ canvas {
   z-index: 30;
   background-color: rgba(61, 61, 61, 0.7); }
 
-#mainFour, #mainFive {
+#mainThree {
+  grid-column: 1 / 13;
+  grid-row: 2 / 6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  z-index: 30; }
+
+#mainFive {
   grid-column: 1 / 13;
   grid-row: 2 / 4;
   display: flex;
@@ -459,9 +470,6 @@ canvas {
   font-weight: 900; }
 
 footer {
-  /*    grid-column: 12 / 13;
-    grid-row: 9 / 10;
-    z-index: 30;*/
   position: absolute;
   display: block;
   width: 5vw;
