--- a/styles/main.scss
+++ b/styles/main.scss
@@ -904,7 +904,7 @@ canvas {
 }
 
 
-#mainTwo, #mainThree {
+#mainTwo, #mainFour {
 
     grid-column: 1 / 13;
     grid-row: 1 / 10;
@@ -921,7 +921,24 @@ canvas {
 
 }
 
-#mainFour, #mainFive {
+#mainThree {
+
+    grid-column: 1 / 13;
+    grid-row: 2 / 6;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;
+    height: 100%;
+
+    z-index: 30;
+
+}
+
+#mainFive {
 
     grid-column: 1 / 13;
     grid-row: 2 / 4;
@@ -954,7 +971,6 @@ canvas {
 #introTextSm {
 
     color: white;
-
     text-align: center;
     margin-bottom: 0;
     width: 100%;
@@ -962,16 +978,12 @@ canvas {
     font-weight: 100;
     font-size: 3rem;
     
-
-
-
 }
 
 
 #introTextLg {
 
     color: #293142;
-
     text-align: center;
     margin: -3rem 0;
     width: 100%;
@@ -981,28 +993,23 @@ canvas {
     font-size: 12rem;
     font-weight: 900;
 
-    
-
 }
 
 
 footer {
-/*    grid-column: 12 / 13;
-    grid-row: 9 / 10;
-    z-index: 30;*/
 
     position: absolute;
     display: block;
     width: 5vw;
-
     right: 0;
     bottom: 0;
     margin-right: 20px;
     margin-bottom: 20px;
     z-index: 30;
+
 }
 
-  /*   Index Page   */
+/*   Index Page   */
 
 #spot {
 
