--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,8 @@
 $bgColor: #e7f0f3;
 /*$brandBlue: #1659a7;*/
 $brandBlue: #226d8d;
+$brandDarkBlue: #293142;
+$brandYellow: #d0c700;
 $shadow: 2px 2px 10px rgba(0,0,0,0.5);
 $shadowClose: 0px 0px 0px rgba(0,0,0,0);
 $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
@@ -52,23 +54,24 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
 
 
 
-  body {
-      font-family: 'acumin-pro', Arial, 'Helvetica Neue', Helvetica, sans-serif;
-      font-size: 16px;
-  }
+body {
+    font-family: 'acumin-pro', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 16px;
+}
 
 
-  button {
+button {
 
-      color: white;
-      font-weight: 600;
-      background-color: $brandBlue;
-      border: 2px solid $brandBlue;
-      padding: 0.5rem 2.5rem;
-      font-family: Arial, sans-serif;
-      transition: all 0.3s ease-out;
+    color: #3d3d3d;
+    font-weight: 600;
+    background-color: $brandYellow;
+    border: 2px solid #ffffff;
+    padding: 0.5rem 2.5rem;
+    font-family: 'acumin-pro', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    transition: all 0.3s ease-out;
+    border-radius: 15px;
 
-  }
+}
 
   button:hover {
 
@@ -78,14 +81,14 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
 
   }
 
-  .noButton {
+.noButton {
 
-      background-color: #c6cdcd;
-      color: $brandBlue;
-      border-color: #c6cdcd; 
-      transition: all 0.3s ease-out;
+    background-color: #8a8a8a;
+    color: #ffffff;
+    border-color: #ffffff; 
+    transition: all 0.3s ease-out;
 
-  }
+}
 
   button:hover.noButton {
 
@@ -119,12 +122,12 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
   }
 
   a {
-      color: $brandBlue;
+      color: $brandDarkBlue;
       transition: color 0.3s ease-out;
   }
 
   a:hover {
-      color: white;
+      color: $brandYellow;
       text-decoration: none;
   }
 
@@ -193,9 +196,11 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
 
     .visHidden {
         visibility: hidden;
+        opacity: 0;
     }
     .visVisible {
         visibility: visible;
+        opacity: 1;
     }
 
     .optionBorder {
@@ -210,12 +215,12 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
 
     .h1Instructions {
 
-        color: #d0c700;
+        color: $brandYellow;
         text-align: center;
         font-family: quatro, sans-serif;
         font-style: italic;
         font-weight: 900;
-        margin-top: 10vh;
+        
 
     }
 
@@ -247,25 +252,63 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
         align-items: center;
         justify-content: center;
 
+        img {
+
+            width: 30%;
+
+        }
+
     }
 
     .insDiv {
 
-       background-color: #d0c287;
-       color: #3c3634;
-       border-radius: 25px;
-       margin-left: -20px;
-       width: 35%;
+        background-color: #d0c287;
+        color: #3c3634;
+        border-radius: 25px;
+        margin-left: -20px;
+        width: 55%;
+        padding-left: 2rem;
+        height: 5rem;
+        padding-top: 1.25rem;
 
-       p {
+        p {
+
             margin-left: 40px;
             margin-top: 0.75rem;
-       }
+
+        }
+
 
     }
 
     .z30 {
+
         z-index: 30;
+
+    }
+
+    .mTop125 {
+
+        margin-top: 1.25rem;
+    }
+
+    .mBottom {
+
+        margin-bottom: 0.4rem;
+
+    }
+
+    .mBottom25 {
+
+        margin-bottom: 0.25rem;
+
+    }
+
+    .helpUs {
+
+        font-weight: 600;
+        font-size: 1.5rem;
+
     }
 
 
@@ -345,7 +388,7 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
 
   #nav {
 
-    -ms-grid-column: 5;
+/*    -ms-grid-column: 5;
     -ms-grid-column-span: 4;
     grid-column: 5 / 9;
 
@@ -359,10 +402,22 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
 
     -webkit-box-pack: center;
     -ms-flex-pack: center;
+    justify-content: center;*/
+
+    grid-column: 2 / 12;
+    grid-row: 9 / 10; 
+    z-index: 50; 
+    font-size: 1rem;
+
+
+    display: flex;
+    align-items: flex-end;
     justify-content: center;
 
-    z-index: 100;
-    display: none;
+    padding: 0.5rem 2rem;
+
+
+
 
   }
 
@@ -370,17 +425,29 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
   .navButton {
 
     position: relative;
+    color: $brandDarkBlue;
 
-    color: white;
+        border-radius: 5px;
+       /* border-width: 0px 0px 3px 0px;*/
+       /* border-color: $brandDarkBlue;
+        border-style: solid;*/
+        background-color: $brandYellow;
+        height: 7.1vh;
 
-    background-color: rgba(255,255,255,0.2);
-    border-radius: 50px;
-    border: 1px solid white;
+/*        width: 85%;
+        height: 63%;*/
+        font-size: 1.25rem;
+        padding: 0.5rem 2rem;
+
+
+/*    background-color: rgba(255,255,255,0.2);
+    border-radius: 5px;
+    border: 1px solid white;*/
 
 
     font-weight: 600;
-    width: 1.5rem;
-    height: 1.5rem;
+/*    width: 1.5rem;
+    height: 1.5rem;*/
 
     margin: 0 .25rem;
 
@@ -403,7 +470,13 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
 
     color: $brandBlue;
     background-color: white;
-    border: 1px solid white;
+/*    border: 1px solid white;*/
+
+        border-radius: 5px;
+        /*border-width: 0px 0px 3px 0px;*/
+        /*border-color: $brandDarkBlue;
+        border-style: solid;*/
+
 
     display: -webkit-box;
     display: -ms-flexbox;
@@ -423,8 +496,11 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
 
     color: $brandBlue;
     background-color: white;
-    border: 1px solid white;
-    margin: 0 .1rem;
+        border-radius: 5px;
+        /*border-width: 0px 0px 3px 0px;*/
+        /*border-color: $brandDarkBlue;
+        border-style: solid;*/
+/*    margin: 0 .1rem;*/
 
   }
 
@@ -468,7 +544,7 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
 #butt1, #butt2 {
 
     grid-column: 3 / 7;
-    grid-row: 9 / 10;
+    grid-row: 8 / 10;
     z-index: 200;
     text-align: center;
     display: flex;
@@ -481,11 +557,18 @@ $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
         border-width: 2px;
         border-color: white;
         border-style: solid;
+        background-color: $brandYellow;
 
         width: 85%;
         height: 63%;
-        font-size: 1rem;
+        font-size: 1.25rem;
+        padding: 0.5rem 2rem;
 
+    }
+
+    button:hover {
+        color: $brandBlue;
+        background-color: white;
     }
 
 
@@ -919,7 +1002,7 @@ canvas {
     justify-content: center;
     width: 100%;
     height: 100%;
-    z-index: 30;
+    z-index: 100;
     background-color: rgba(61, 61, 61, 0.7);
     
 
@@ -927,8 +1010,8 @@ canvas {
 
 #mainThree {
 
-    grid-column: 1 / 13;
-    grid-row: 2 / 6;
+    grid-column: 4 / 10;
+    grid-row: 4 / 8;
 
     display: flex;
     flex-direction: column;
@@ -937,8 +1020,44 @@ canvas {
 
     width: 100%;
     height: 100%;
-
+    background-color: rgba(61, 61, 61, 1);
     z-index: 30;
+    border-radius: 25px;
+
+}
+
+#youStopped {
+
+    grid-column: 4 / 10;
+    grid-row: 4 / 8;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    z-index: 30;
+    background-color: rgba(61, 61, 61, 1);
+    border-radius: 25px;
+
+}
+
+#tryAnother {
+
+    text-align: center;
+    flex-direction: column;
+    width: 100%;
+
+    div {
+
+        width: 100%;
+    }
+
+}
+
+#goNext {
+
+    align-items: center;
+    justify-content: center;
 
 }
 
@@ -1097,7 +1216,7 @@ footer {
 
 .blurIn {
 
-    animation: blurIn 1s ease-out 3s forwards;
+    animation: blurIn 1s ease-out forwards 3s;
 
 }
 
@@ -1203,17 +1322,21 @@ footer {
 
 /* Instructions */
 #instructions {
-
+/*
     -ms-grid-column: 2;
     -ms-grid-column-span: 10;
     grid-column: 2 / 10;
 
     -ms-grid-row: 1;
     -ms-grid-row-span: 7;
-    grid-row: 1 / 8;
+    grid-row: 1 / 8;*/
+
+
 
     z-index: 20;
     margin: -1vh;
+
+    width: 100%;
 
 }
 
@@ -1260,6 +1383,9 @@ footer {
     top: 20px; 
     right:20px; 
     z-index: 60;  
+    background-color: red;
+    width: 100px;
+    height: 100px;
       
 }
 
@@ -1377,16 +1503,45 @@ footer {
 
 #stepsContent {
 
-    display: block;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+    width: 100%;
+    margin: 5vh 0;
 
 }
+
+
 
 .stepsStyle {
 
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
+    width: 15vw;
+    min-height: 51vh;
+    background-color: #d0c287;
+    color: #3c3634;
+    border-radius: 30px;
+
+    img {
+        width: 120%;
+        margin-left: 20px;
+    }
+
+    h3 {
+
+        padding-top: 1rem;
+
+    }
+
+    p {
+        padding: 1rem;
+        padding-top: 0;
+        text-align: center;
+    }
+
 
 }
 
@@ -2122,8 +2277,9 @@ footer {
 
 
       .navButton {
-          width: 2.25rem;
-          height: 2.25rem;
+          /*width: 2.25rem;*/
+          width: 100%;
+          /*height: 2.25rem;*/
       }
 
 
@@ -2282,9 +2438,9 @@ footer {
 
       #instructions {
 
-          -ms-grid-column: 2;          
+/*          -ms-grid-column: 2;          
           -ms-grid-column-span: 10;          
-          grid-column: 2 / 10;
+          grid-column: 2 / 10;*/
 
       }
 
@@ -2431,9 +2587,9 @@ footer {
 
   #nav {
 
-      grid-column: 5 / span 4;
+/*      grid-column: 5 / span 4;
       grid-row: 9 / 10;
-
+*/
   }
 
 
@@ -2445,9 +2601,9 @@ footer {
 
   /* Instructions */
   #instructions {
-
+/*
       grid-column: 2 / span 10;
-      grid-row: 1 / 8;
+      grid-row: 1 / 8;*/
 
   }
 
@@ -2543,7 +2699,7 @@ footer {
 
       #instructions {
 
-          grid-column: 2 / span 10;
+/*          grid-column: 2 / span 10;*/
 
       }
 
