--- a/styles/main.css
+++ b/styles/main.css
@@ -33,6 +33,9 @@ button:hover.noButton {
   color: #545454;
   border-color: #efefef; }
 
+#nextPage {
+  margin-top: 1rem; }
+
 h1 {
   color: white;
   position: relative;
@@ -241,6 +244,8 @@ a:hover {
   align-items: flex-end;
   justify-content: center;
   padding: 0.5rem 2rem; }
+  #nav a {
+    margin: 0.4rem 0.2rem; }
 
 .navButton {
   position: relative;
@@ -321,31 +326,6 @@ a:hover {
   animation-timing-function: ease-out;
   animation-fill-mode: forwards;
   animation-direction: reverse; }
-
-#butt1, #butt2 {
-  grid-column: 3 / 7;
-  grid-row: 8 / 10;
-  z-index: 200;
-  text-align: center;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center; }
-  #butt1 button, #butt2 button {
-    border-radius: 25px;
-    border-width: 2px;
-    border-color: white;
-    border-style: solid;
-    background-color: #d0c700;
-    width: 85%;
-    height: 63%;
-    font-size: 1.25rem;
-    padding: 0.5rem 2rem; }
-  #butt1 button:hover, #butt2 button:hover {
-    color: #226d8d;
-    background-color: white; }
-
-#butt2 {
-  grid-column: 7 / 11; }
 
 /* /////////////   Main Content   ///////////// */
 /*   Main  */
@@ -460,31 +440,29 @@ canvas {
   width: 100%;
   z-index: 30; }
 
-#mainTwo, #mainFour {
+#mainTwo, #mainThree {
   grid-column: 1 / 13;
-  grid-row: 1 / 10;
-  position: absolute;
+  grid-row: 1 / 11;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
-  z-index: 100;
+  z-index: 50;
   background-color: rgba(61, 61, 61, 0.7); }
 
-#mainThree {
-  grid-column: 4 / 10;
-  grid-row: 4 / 8;
+#mainFour {
+  grid-column: 1 / 13;
+  grid-row: 1 / 4;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
-  background-color: #3d3d3d;
-  z-index: 30;
-  border-radius: 25px; }
+  z-index: 30; }
 
 #youStopped {
   grid-column: 4 / 10;
@@ -520,13 +498,21 @@ canvas {
   height: 100%;
   z-index: 30; }
 
-#mainSix {
-  grid-column: 1 / 13;
-  grid-row: 3 / 9;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%; }
+#info {
+  grid-column: 12 / 13;
+  grid-row: 1 / 2;
+  background-color: gold;
+  width: 100%;
+  height: 100%;
+  z-index: 60; }
+
+#closeInstruct {
+  grid-column: 12 / 13;
+  grid-row: 1 / 2;
+  background-color: red;
+  width: 100%;
+  height: 100%;
+  z-index: 60; }
 
 #introTextSm {
   color: white;
@@ -604,6 +590,9 @@ footer {
 
 .blurIn {
   animation: blurIn 1s ease-out forwards 3s; }
+
+.blurInFast {
+  animation: blurIn 1s ease-out forwards; }
 
 .blurOut {
   animation: blurOut 1s ease-out forwards; }
@@ -694,15 +683,6 @@ footer {
 .insHr {
   border-top: 1px solid white;
   width: 50%; }
-
-.closeInstruct {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  z-index: 60;
-  background-color: red;
-  width: 100px;
-  height: 100px; }
 
 #instructionsBG {
   display: flex;
@@ -1075,7 +1055,7 @@ footer {
 
 .fadeInDelay {
   opacity: 0;
-  animation-delay: 1.5s;
+  animation-delay: 3s;
   animation-name: fadeIn;
   animation-duration: 1s;
   animation-timing-function: ease-out;
@@ -1145,8 +1125,6 @@ footer {
 @keyframes fadeOut {
   0% {
     opacity: 1; }
-  25% {
-    opacity: 1; }
   100% {
     opacity: 0; } }
 
@@ -1157,7 +1135,6 @@ footer {
     opacity: 0; } }
 
 .fadeOut {
-  opacity: 1;
   animation-name: fadeOut;
   animation-duration: 0.5s;
   animation-timing-function: ease-out;
