--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1053,24 +1053,43 @@ canvas {
 #info {
 
     grid-column: 12 / 13; 
-    grid-row: 1 / 2; 
-    background-color: gold; 
+    grid-row: 1 / 2;  
     width: 100%; 
     height: 100%; 
     z-index: 60;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    transition: color 0.3s ease-out;
 
+}
+
+#info:hover {
+
+    color: $brandYellow;
+    
 }
 
 #closeInstruct {
 
     grid-column: 12 / 13;
     grid-row: 1 / 2;   
-    background-color: red;
     width: 100%;
     height: 100%;
     z-index: 60;
-      
+    align-items: center;
+    justify-content: center;
+    color: white;
+    transition: color 0.3s ease-out;
+
 }
+
+#closeInstruct:hover {
+
+    color: $brandYellow;
+    
+}
+
 
 #introTextSm {
 
